--- a/src/pages/Home/ZynorBrand/ZynorBrand.css
+++ b/src/pages/Home/ZynorBrand/ZynorBrand.css
@@ -10,8 +10,8 @@
 
 .zynor-brand-bg {
     filter: brightness(0.4);
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
 }
 
 
