--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,11 @@
   /* border-radius: 6px; */
 }
 
+::-webkit-scrollbar-thumb:hover {
+  background-color: #9031e7; /* Scrollbar color */
+  /* border-radius: 6px; */
+}
+
 
 
 /* Firefox scrollbar */
