--- a/src/pages/Home/ZynorBrand/ZynorBrand.css
+++ b/src/pages/Home/ZynorBrand/ZynorBrand.css
@@ -24,14 +24,16 @@
 }
 
 @keyframes floatingAnimation {
-    0%{
-        top:0px
+    0% {
+        top: 0px
     }
-    50%{
-        top:8px
+
+    50% {
+        top: 8px
     }
-    100%{
-        top:0px
+
+    100% {
+        top: 0px
     }
 }
 
@@ -47,4 +49,20 @@
         height: 100%;
     }
 
+}
+
+@media screen and (min-width: 576px) and (max-width: 990px) {
+    .zynor-brand-bg {
+        filter: brightness(0.4);
+        width: 200%;
+        height: 100%;
+    }
+}
+
+@media screen and (min-width: 992px) and (max-width: 2000px) {
+    .zynor-brand-bg {
+        filter: brightness(0.4);
+        width: 100%;
+        height: 100%;
+    }
 }
