--- a/src/pages/Home/FindYourWork/FindYourWork.css
+++ b/src/pages/Home/FindYourWork/FindYourWork.css
@@ -1,5 +1,4 @@
 .ourWorkContainer::-webkit-scrollbar {
-    /* width: 10px; */
     height: 5px;
     background-color: #ffffff;
 }
@@ -8,3 +7,22 @@
     background-color: #9031e7;
 }
 
+.scroll-section-outer {
+    overflow: hidden;
+  }
+  
+  .scroll-section-inner {
+    height: 100vh;
+    width: 300vw;
+    display: flex;
+    flex-direction: row;
+    position: relative;
+  }
+  
+  .scroll-section {
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
